# pet_learn_without_clean

./: README.md  claude.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f8c18ba87f7_create_markets_table.py  1c4c9e758481_add_clob_token_ids_and_event_slug_to_.py  515b9ced7c47_fix_start_date_end_date_timezone.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: markets.py
backend/app/core/: config.py  database.py
backend/app/ingestion/polymarket/: gamma_client.py  schemas.py  transformer.py
backend/app/models/: __init__.py  market.py
backend/app/repositories/: markets.py
backend/app/schemas/: markets.py
backend/app/services/: markets.py
backend/polymarket_intelligence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/app/: layout.tsx
frontend/app/markets/: loading.tsx  page.tsx
frontend/lib/: api.ts
frontend/types/: market.ts
