[project]
name="polymarket-intelligence"
version="0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "pandera>=0.31.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.47.0" 
]

[project.optional-dependencies]

dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "testcontainers>=4.14.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]